--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "next": "14.2.5",
+    "notistack": "^3.0.1",
     "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
